Refactoring of templates and api services
Bootstrap implementation, Api service refactoring, added store, added configurable routing, added gallery functionality, translations using i18.

--- a/src/components/About/AboutAssociation.css
+++ b/src/components/About/AboutAssociation.css
@@ -1,18 +1,17 @@
 .container {
-    max-width: 900px; /* optional, to center content */
-  }
-  
-  /* Use your brand’s primary color here */
-  .primary-color {
-    color: #2f2f8d; /* example purple/blue from your design */
-  }
-  
-  ul {
-    list-style: disc inside;
-    margin-left: 1rem; /* optional spacing */
-  }
-  
-  li {
-    margin-bottom: 0.5rem;
-  }
-  
+  max-width: 900px;
+}
+
+ul {
+  list-style: disc inside;
+  margin-left: 1rem;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+/* Overriding Bootstrap */
+.list-style {
+  list-style-type: disc !important;
+}
