--- a/src/components/Razgovori/RazgovoriDetails.css
+++ b/src/components/Razgovori/RazgovoriDetails.css
@@ -1,46 +1,1 @@
-.razgovori-detail-wrapper {
-  margin: 0 auto;
-  padding: 20px;
-  font-family: Arial, sans-serif;
-}
-
-.razgovori-detail {
-  border-radius: 8px;
-}
-
-.razgovori-thumbnail {
-  width: 350px;
-  border-radius: 8px;
-  margin-bottom: 20px;
-  align-self: flex-start;
-  object-fit: cover;
-}
-
-.razgovori-title {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: bold;
-  z-index: 2;
-  text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.7);
-}
-
-.razgovori-description {
-  font-size: 1rem;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.razgovori-user,
-.razgovori-date {
-  font-size: 0.9rem;
-  color: #555;
-}
-
-@media (max-width: 420px) {
-  .razgovori-detail img {
-    width: 100%;
-  }
-}
+/* Razgovori Details */
