--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,184 +1,15 @@
-/* General Header Styles */
-header {
-  font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.header-top {
-  display: flex;
-  background-color: white;
-  padding: 10px 20px;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
 .logo-img {
-  height: 50px;
-}
-
-.fs-14 {
-  font-size: 14px !important;
-}
-
-.hamburger {
-  display: none;
-  padding: 0;
-  background: none;
-  border: none;
-  font-size: 24px;
-  color: #3d5a80;
-  cursor: pointer;
-  margin-left: 0;
-}
-
-.header-nav-wrapper {
-  background-color: #3d5a80;
-  color: white;
-}
-
-.nav-link:focus {
-  color: white !important;
-}
-
-.nav-link:hover {
-  color: white !important;
-}
-
-.nav-link {
-  padding: 0.2rem 0 !important;
-  cursor: pointer;
-}
-
-.nav-menu {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-
-.nav-menu li {
-  position: relative;
-}
-
-.nav-menu a {
-  color: white;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: #3d5a80;
-  list-style: none;
-  padding: 10px;
-}
-
-.nav-item.open .dropdown-menu {
-  display: block;
-}
-
-/* Responsive */
-@media (max-width: 1280px) {
-  .hamburger {
-    display: block;
-    margin-left: auto;
-    margin-left: 0;
-  }
-
-  button.bg-white {
-    margin-left: auto;
-  }
-
-  .nav-menu {
-    display: none;
-    flex-direction: column;
-    padding: 10px;
-  }
-
-  .nav-menu.active {
-    display: flex;
-  }
-
-  .header-nav-wrapper {
-    padding: 10px;
-  }
-  .contact-info {
-    display: none !important;
-  }
-}
-
-@media (max-width: 1280px) {
-  .contact-info {
-    display: none !important;
-  }
-  div.search-bar {
-    display: none;
-  }
-}
-
-@media (max-width: 1000px) {
-  .header-nav {
-    width: 100% !important;
-  }
-  .header-top {
-    width: 100% !important;
-  }
-}
-
-.btn-label {
-  position: absolute;
-  right: 10%;
-}
-
-.search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-info {
-  display: flex;
-  align-items: center;
-}
-
-.email,
-.phone {
-  display: flex;
-  align-items: center;
-}
-
-.search-input-wrapper {
-  position: relative;
-  width: 100%;
+  height: 70px;
 }
 
 .search-input-wrapper .form-control {
-  width: 100%;
-  padding-right: 40px; /* Make space for the button */
   border-radius: 20px;
-  border: 1px solid #ccc;
-  outline: none;
-  font-size: 14px;
 }
 
-.search-input-wrapper .btn-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  border: none;
-  background: none;
-  color: #888;
-  cursor: pointer;
-  font-size: 16px;
-  padding: 0;
+.search-input-wrapper .btn {
+  border-radius: 0 20px 20px 0;
 }
 
-.search-input-wrapper .btn-icon:hover {
-  color: #3d5a80;
+ul {
+  margin-left: 0 !important;
 }
