--- a/src/components/Tribine/Tribine.css
+++ b/src/components/Tribine/Tribine.css
@@ -1,21 +1,4 @@
-.tribine-list {
-  padding: 20px;
-  text-align: center;
-  width: 78%;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
-}
-
 .tribine-card {
-  position: relative;
-  cursor: pointer;
-  overflow: hidden;
-  border-radius: 10px;
   transition: transform 0.3s ease;
 }
 
@@ -23,17 +6,10 @@
   transform: scale(1.05);
 }
 
-.thumbnail-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
 .thumbnail {
   width: 100%;
-  height: 300px; /* Set fixed height */
+  height: 300px;
   object-fit: cover;
-  display: block;
 }
 
 .gradient-overlay {
@@ -50,14 +26,8 @@
   bottom: 20px;
   left: 20px;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
-  z-index: 2;
-  text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.7);
-}
-
-.title-style {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-  color: #001f3f; /* Optional color for the main title */
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
