--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap");
 
 :root {
   font-size: 16px;
 
-  --font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-family: "Sen", system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   /* Primary Font Sizes (Scale) */
   --font-size-2xs: 0.5rem; /* 10px  */
@@ -13,7 +13,12 @@
   --font-size-lg: 1.25rem; /* 20px */
   --font-size-xl: 1.5rem; /* 24px  */
   --font-size-2xl: 2rem; /* 32px   */
-  --font-size-3xl: 3rem; /* 48px   */
+  --font-size-3xl: 2.3rem; /* 48px   */
+
+  --font-size-subtitle: 1.125rem; /* 18px */
+  --font-size-hero-title: 1.375rem; /* 22px */
+  --font-size-main-title: 2.25rem; /* 36px   */
+  --font-size-info-xs: 0.564rem; /* 9px  */
 
   /* Primary colors */
   --color-primary: #3d5a80;
@@ -21,16 +26,21 @@
   --color-light-blue: #edf2fc;
   --color-title: #1a1675;
   --color-border: #1a1675;
+  --border-primary: 1px solid rgba(61, 90, 128, 0.5);
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  font-family: var(--font-family);
   font-size: var(--font-size-md); /* fallback for body text */
   line-height: 1.5;
   color: #333; /* or your default text color */
+}
+
+body {
+  font-family: var(--font-family) !important;
+  min-height: calc(100vh - 250px);
 }
 
 a {
@@ -46,10 +56,6 @@ a:hover {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.container {
-  transition: 0.5s ease-in-out;
 }
 
 .cursor-pointer {
@@ -77,4 +83,33 @@ button:focus-visible {
 
 ul {
   list-style: none !important;
+}
+
+.wave-background {
+  background-image: url("assets/wave.png");
+  background-repeat: repeat;
+  background-position: center;
+  background-repeat: repeat-y;
+  background-position: center top;
+}
+
+.navigation-button {
+  height: 40px;
+  width: 195px;
+}
+
+.section-divider {
+  margin-top: 55px;
+}
+
+.section-divider-large {
+  margin-top: 103px;
+}
+
+.section-divider-small {
+  margin-top: 45px;
+}
+
+.section-divider-xs {
+  margin-top: 25px;
 }
