--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -15,6 +15,10 @@
   border-bottom: 1px solid var(--color-border);
 }
 
+.primary-border {
+  border: var(--border-primary);
+}
+
 .light-blue {
   background-color: var(--color-light-blue) !important;
 }
